--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,8 +3,8 @@
     <head>
         <!-- Primary Meta Tags -->
         <title>
-            Council Data Project | Missoula – Searchable
-            city council videos, transcripts, voting records, and legislation.
+            Council Data Project | Missoula – Searchable city council videos,
+            transcripts, voting records, and legislation.
         </title>
         <meta
             name="title"
@@ -17,20 +17,20 @@
         <meta charset="utf-8" />
         <link
             rel="icon"
-            href="https://smai-f.github.io/missoula-council-data-project/favicon.ico"
+            href="https://OpenMontana.github.io/missoula-council-data-project/favicon.ico"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <link
             rel="manifest"
-            href="https://smai-f.github.io/missoula-council-data-project/manifest.json"
+            href="https://OpenMontana.github.io/missoula-council-data-project/manifest.json"
         />
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
         <meta
             property="og:url"
-            content="https://smai-f.github.io/missoula-council-data-project"
+            content="https://OpenMontana.github.io/missoula-council-data-project"
         />
         <meta
             property="og:title"
@@ -42,14 +42,14 @@
         />
         <meta
             property="og:image"
-            content="https://smai-f.github.io/missoula-council-data-project/cdp-og-seo.png"
+            content="https://OpenMontana.github.io/missoula-council-data-project/cdp-og-seo.png"
         />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
         <meta
             property="twitter:url"
-            content="https://smai-f.github.io/missoula-council-data-project"
+            content="https://OpenMontana.github.io/missoula-council-data-project"
         />
         <meta
             property="twitter:title"
@@ -61,13 +61,13 @@
         />
         <meta
             property="twitter:image"
-            content="https://smai-f.github.io/missoula-council-data-project/cdp-twitter-seo.png"
+            content="https://OpenMontana.github.io/missoula-council-data-project/cdp-twitter-seo.png"
         />
 
         <!-- Analytics -->
         <script
             defer
-            data-domain="smai-f.github.io"
+            data-domain="OpenMontana.github.io"
             src="https://plausible.io/js/plausible.hash.js"
         ></script>
     </head>
