Upgrade to cookiecutter v3.1.3

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,8 +3,8 @@
     <head>
         <!-- Primary Meta Tags -->
         <title>
-            Council Data Project | Missoula – Searchable city council videos,
-            transcripts, voting records, and legislation.
+            Council Data Project | Missoula – Searchable
+            city council videos, transcripts, voting records, and legislation.
         </title>
         <meta
             name="title"
